@@ -192,7 +192,8 @@ typedef enum
     FONT_TYPE_TOY = CAIRO_FONT_TYPE_TOY,
     FONT_TYPE_FT = CAIRO_FONT_TYPE_FT,
     FONT_TYPE_WIN32 = CAIRO_FONT_TYPE_WIN32,
-    FONT_TYPE_ATSUI = CAIRO_FONT_TYPE_ATSUI
+    FONT_TYPE_ATSUI = CAIRO_FONT_TYPE_QUARTZ, /**< @deprecated Use FONT_TYPE_QUARTZ instead. */
+    FONT_TYPE_QUARTZ = CAIRO_FONT_TYPE_QUARTZ
 } FontType;
 
 } // namespace Cairo
